Fixed Bug Where TypeCells Could Be Too Small

--- a/main.css
+++ b/main.css
@@ -351,7 +351,8 @@ input {
     box-shadow: 0 0 1px 0px inset;
 }
 .typeCell, .addSheet {
-    width: 25px;
+    min-width: 15px;
+    padding: 0 5px 0 5px;
     height: 100%;
     font-size: 10px;
     float: left;
